{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 65,
  "lineage": "6f6784ae-7b8c-fd1c-8b53-bf8e84aa92c8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-30T15:08:59.661-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/658139626753/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/global/networks/my-vpc",
            "priority": 1000,
            "project": "658139626753",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-30T15:08:59.657-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/658139626753/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/global/networks/my-vpc",
            "priority": 1000,
            "project": "658139626753",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/zones/us-central1-a/disks/typescript-api-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-05-30T17:11:41.160-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/658139626753/zones/us-central1-a/instances/typescript-api-vm",
            "instance_id": "8847317330684278739",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "7PXoH9C12Tc=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update -y\nsudo apt-get install -y curl git\ncurl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -\nsudo apt-get install -y nodejs\nsudo npm install -g pm2\ncd /home\nsudo git clone https://github.com/ybborowski/B2RISE-gcp-challenge.git projeto-api\ncd projeto-api/api\nsudo npm install\nsudo npm run build || echo \"Nenhum build necessário\"\nsudo pm2 start dist/index.js --name typescript-api\nsudo pm2 startup systemd\n [...]
            "name": "typescript-api-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.16.115.13",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/global/networks/my-vpc",
                "network_ip": "10.0.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/regions/us-central1/subnetworks/my-subnet",
                "subnetwork_project": "wski-b2rise-gcp-challenge"
              }
            ],
            "project": "658139626753",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/zones/us-central1-a/instances/typescript-api-vm",
            "service_account": [
              {
                "email": "api-pubsub-sa@658139626753.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.api_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/658139626753/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7582564781884150442",
            "numeric_id": "7582564781884150442",
            "project": "658139626753",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/global/networks/my-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-30T15:09:00.402-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/658139626753/regions/us-central1/subnetworks/my-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "658139626753",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wski-b2rise-gcp-challenge/regions/us-central1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2412733637194125971
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}